--- a/config/csgnn_4_coarsened.yaml
+++ b/config/csgnn_4_coarsened.yaml
@@ -1,10 +1,10 @@
 general:
   seed: 1
-  device: 0
+  device: 3
 
 data:
   name: zinc12k 
-  bs: 128 
+  bs: 32
   num_workers: 4
 
   force_identity: False
@@ -53,4 +53,4 @@ training:
   warmup: 10
 
 wandb:
-  project_name: csgnn_1_uLvLpoint
+  project_name: csgnn_4_coarsening
