--- a/config/csgnn_4_original.yaml
+++ b/config/csgnn_4_original.yaml
@@ -1,13 +1,13 @@
 general:
   seed: 1
-  device: 0
+  device: 3
 
 data:
   name: zinc12k 
-  bs: 128 
+  bs: 32
   num_workers: 4
 
-  force_identity: False
+  force_identity: True
 
   preprocess:
     max_dis: 5 # Max clamp value for SPD distance
@@ -15,7 +15,7 @@ data:
     max_spd_elements: 10  # Nodes are pairs (S, v), where S is a set. For SPD feature calculation, max_spd_elements restricts S to its first max_spd_elements elements when sorted by SPD distance. Must be less than 100.
     pad_value: 1002 # pad value for sets S with less than max_spd_elements elements
     global_attr_max_val: 10 # Equivariant layers are encoded as edge features (different integers correpond to different parameters). Max clamp value for edge features
-    n_cluster: 5
+    n_cluster: 40
     dim_laplacian: 2 # number of columns to use for spectral clustering
 
 model:
@@ -26,7 +26,7 @@ model:
   base_mpnn: Gin # Supports [GatV2, Transformer_conv, Gat, Gin]
   H: 4 # Warning: H represents the number of heads for GAT, GatV2, and Transformer_conv. It is ignored for other architectures.
   residual: False
-  aggs: ["uL", "vL", "point"] # To exclude a specific aggregation during training (e.g., "point"), simply pass ["uL", "vL"] instead.
+  aggs: ["uL", "vL"] # To exclude a specific aggregation during training (e.g., "point"), simply pass ["uL", "vL"] instead.
   sum_pooling: False # False stands for mean pooling
   point_encoder: MLP # Encoder for the "point" aggregation. Supported options: "RELU", "MLP", "NONE".
 
@@ -53,4 +53,4 @@ training:
   warmup: 10
 
 wandb:
-  project_name: csgnn_1_uLvLpoint
+  project_name: csgnn_4_coarsening
